[gd_scene load_steps=9 format=3 uid="uid://tsi5pgxotxh7"]

[ext_resource type="PackedScene" uid="uid://ifqvg5jaythd" path="res://scenes/ui/inventory.tscn" id="1_284y0"]
[ext_resource type="Texture2D" uid="uid://cwdot6yjj10sx" path="res://assets/HP/Sprite-0003 (1).png" id="2_rcgkl"]
[ext_resource type="Script" uid="uid://copuvhc75t7li" path="res://scenes/ui/hud.gd" id="2_vnpvo"]
[ext_resource type="Texture2D" uid="uid://b0o1utkqcos4h" path="res://assets/HP/Sprite-0001 (1).png" id="3_vnpvo"]
[ext_resource type="Texture2D" uid="uid://xk1edn7b6hr3" path="res://assets/HP/Sprite-0002 (1).png" id="4_vo76m"]
[ext_resource type="FontFile" uid="uid://djo2ymmln3321" path="res://Fonts/m5x7.ttf" id="6_vo76m"]
[ext_resource type="Texture2D" uid="uid://bgn6qqwpdxs5u" path="res://assets/Items_icon/trash.png" id="7_xg44s"]
[ext_resource type="PackedScene" uid="uid://btoj1kmo6snnv" path="res://scenes/ui/cheese_cell.tscn" id="8_fhs8v"]

[node name="UserInterface" type="CanvasLayer"]

[node name="Inventory" parent="." instance=ExtResource("1_284y0")]
visible = false

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_vnpvo")

[node name="HealthBar" type="TextureProgressBar" parent="HUD"]
layout_mode = 0
offset_top = 26.0
offset_right = 370.0
offset_bottom = 123.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("2_rcgkl")
texture_over = ExtResource("3_vnpvo")
texture_progress = ExtResource("4_vo76m")
tint_under = Color(0.5470201, 0.4797873, 0.47441024, 1)
tint_over = Color(0.54509807, 0.47843137, 0.4745098, 1)
tint_progress = Color(1, 0, 0, 1)

[node name="CurrencyLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 77.0
offset_top = 145.0
offset_right = 360.0
offset_bottom = 209.0
theme_override_fonts/font = ExtResource("6_vo76m")
theme_override_font_sizes/font_size = 64
text = "10"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 13.0
offset_top = 121.0
offset_right = 129.0
offset_bottom = 237.0
texture = ExtResource("7_xg44s")

[node name="CheeseContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 0
offset_left = 48.0
offset_top = 219.0
offset_right = 376.0
offset_bottom = 330.5493
theme_override_constants/separation = 100

[node name="CheeseCell1" parent="HUD/CheeseContainer" instance=ExtResource("8_fhs8v")]
layout_mode = 2

[node name="CheeseCell2" parent="HUD/CheeseContainer" instance=ExtResource("8_fhs8v")]
layout_mode = 2

[node name="CheeseCell3" parent="HUD/CheeseContainer" instance=ExtResource("8_fhs8v")]
layout_mode = 2
